# pr4xis

./: .gitignore  .release-please-config.json  .release-please-manifest.json  Cargo.toml  README.md  devenv.nix
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs
crates/domains/: CHANGELOG.md  Cargo.toml
crates/domains/benches/: ontology_benchmarks.rs
crates/domains/docs/: explorer.html  report.html  report.json
crates/domains/proptest-regressions/science/information/: tests.txt
crates/domains/src/: classify.rs  lib.rs
crates/domains/src/applied/: mod.rs
crates/domains/src/applied/data_provisioning/: fetch.rs  registry.rs
crates/domains/src/applied/dependability/: README.md  citings.md  mod.rs  ontology.rs
crates/domains/src/applied/hardware/elevator/: ontology.rs
crates/domains/src/applied/hardware/traffic/: ontology.rs
crates/domains/src/applied/hmi/: mod.rs
crates/domains/src/applied/hmi/explorer/: README.md  citings.md  mod.rs  ontology.rs
crates/domains/src/applied/hmi/input/: README.md  citings.md  mod.rs
crates/domains/src/applied/hmi/report/: README.md  citings.md  mod.rs  (+3 more)
crates/domains/src/applied/resilience/: dependability_functor.rs  mod.rs  ontology.rs
crates/domains/src/calculator/: constants.rs  engine.rs  mod.rs  tests.rs
crates/domains/src/chess/: engine.rs  mod.rs  ontology.rs  pgn.rs  tests.rs
crates/domains/src/cognitive/cognition/: epistemics_response_functor.rs  mod.rs
crates/domains/src/cognitive/linguistics/: mod.rs
crates/domains/src/elevator/: building.rs  engine.rs  mod.rs  ontology.rs  tests.rs
crates/domains/src/formal/analytical_methods/: ontology.rs
crates/domains/src/formal/calculator/: expr.rs  units.rs
crates/domains/src/formal/derivation/: ontology.rs
crates/domains/src/formal/information/: ontology.rs
crates/domains/src/formal/logic/: mod.rs
crates/domains/src/formal/math/: ontology.rs
crates/domains/src/formal/meta/: gap_analysis.rs  mod.rs
crates/domains/src/formal/optimization/: ontology.rs
crates/domains/src/formal/recommendation/: ontology.rs
crates/domains/src/formal/systems/: engine_functor.rs  ontology.rs  traffic_functor.rs
crates/domains/src/games/: mod.rs
crates/domains/src/games/rubik/: engine.rs  mod.rs  ontology.rs  tests.rs
crates/domains/src/games/simon/: engine.rs  mod.rs  tests.rs
crates/domains/src/games/tetris/: engine.rs  mod.rs  tests.rs
crates/domains/src/governance/compliance/: escalation.rs  law.rs  ontology.rs  tests.rs
crates/domains/src/http/: engine.rs  mod.rs  ontology.rs  tests.rs
crates/domains/src/legal/: engine.rs  lifecycle.rs  mod.rs  ontology.rs  tests.rs
crates/domains/src/natural/biomedical/: adjunctions.rs  composition_tests.rs
crates/domains/src/natural/colors/: ontology.rs
crates/domains/src/natural/geodesy/: ontology.rs  tests.rs
crates/domains/src/natural/hearing/: adjunctions.rs
crates/domains/src/natural/music/: interval.rs  note.rs
crates/domains/src/natural/physics/: ontology.rs
crates/domains/src/science/: mod.rs
crates/domains/src/science/biomedical/: adjunctions.rs  composition_tests.rs  gap_analysis.rs
crates/domains/src/science/calculator/: engine.rs  tests.rs
crates/domains/src/science/cognition/: distinction.rs  epistemics.rs  metacognition.rs  self_model.rs
crates/domains/src/science/colors/: engine.rs  mod.rs  ontology.rs  srgb.rs
crates/domains/src/science/geodesy/: ontology.rs  tests.rs
crates/domains/src/science/hearing/: adjunctions.rs
crates/domains/src/science/information/: mod.rs  ontology.rs  tests.rs
crates/domains/src/science/linguistics/: language.rs  mod.rs
crates/domains/src/science/math/: functions.rs  ontology.rs
crates/domains/src/science/music/: tests.rs
crates/domains/src/science/physics/: ontology.rs
crates/domains/src/science/systems/: control.rs  engine_functor.rs  mod.rs  ontology.rs
crates/domains/src/social/compliance/: ontology.rs
crates/domains/src/social/judicial/: ontology.rs
crates/domains/src/technology/theming/: base16.rs  explorer.rs  keybindings.rs  mod.rs  ontology.rs  report.rs  report_spec.rs  schemes.rs  shader_params.rs  surfaces.rs  theme_package.rs  validate_themes.rs  variants.rs  visualization.rs
crates/domains/src/traffic/: engine.rs  mod.rs  ontology.rs  tests.rs
crates/examples/: Cargo.toml
crates/examples/src/puzzles/: byzantine.rs  hanoi.rs  knights_tour.rs  konigsberg.rs  missionaries.rs  monty_hall.rs  n_queens.rs  prisoner.rs  river_crossing.rs  sudoku.rs  water_jugs.rs
crates/examples/src/sensor_fusion/: constant_velocity.rs  covariance_intersection.rs  dvl_ins.rs  falling_object.rs  frame_chain.rs  gating_validation.rs  ins_gnss_integration.rs  multi_sensor_ahrs.rs  orbit_determination.rs  radar_tracking.rs
crates/praxis/: Cargo.toml
crates/praxis/src/: lib.rs
crates/praxis/src/category/: axiom.rs  category.rs  functor.rs  mod.rs  relationship.rs  validate.rs
crates/praxis/src/codegen/: generate.rs  wordnet.rs
crates/praxis/src/engine/: action.rs  engine.rs  mod.rs  tests.rs  trace.rs
crates/praxis/src/logic/: inference.rs  mod.rs  propositional.rs  truth_table.rs
crates/praxis/src/ontology/: domain.rs  mod.rs  property.rs  rule.rs  tests.rs  validate.rs
crates/praxis/src/ontology/reasoning/: cached.rs  causation.rs  context.rs  graph.rs  mereology.rs  mod.rs  opposition.rs  taxonomy.rs  tests.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
crates/wasm/www/: index.html
crates/web/: Cargo.toml
crates/web/src/: main.rs
(+595 files in other folders)
