[package]
name = "pr4xis-cli"
version = "0.1.3"
edition = "2024"
authors = ["i-am-logger"]
description = "Praxis chatbot CLI — axiomatic intelligence via ontology"
license = "CC-BY-NC-SA-4.0"

[[bin]]
name = "pr4xis"
path = "src/main.rs"

[dependencies]
pr4xis = { path = "../pr4xis" }
pr4xis-chat = { path = "../chat" }
pr4xis-domains = { path = "../domains" }

[build-dependencies]
pr4xis = { path = "../pr4xis", features = ["codegen"] }
