[package]
name = "pr4xis-examples"
version = "0.1.4"
edition = "2024"
authors = ["i-am-logger"]
description = "Example puzzles and reference implementations"
license = "CC-BY-NC-SA-4.0"
publish = false

[dependencies]
pr4xis = { path = "../pr4xis" }
pr4xis-domains = { path = "../domains" }

[dev-dependencies]
proptest = "1.6"
