[package]
name = "praxis"
version = "0.1.0"
edition = "2024"
authors = ["i-am-logger"]
description = "Prove your domain is correct — ontology-driven rule enforcement with category theory, logical composition, and runtime state machines"
license = "CC-BY-NC-SA-4.0"
repository = "https://github.com/i-am-logger/praxis"
homepage = "https://github.com/i-am-logger/praxis"
keywords = ["ontology", "category-theory", "enforcement", "state-machine", "formal-methods"]

[dependencies]

[dev-dependencies]
proptest = "1.6"
