[package]
name = "pr4xis-wasm"
version = "0.1.0"
edition = "2024"
authors = ["i-am-logger"]
description = "pr4xis chatbot — WASM build for browser"
license = "CC-BY-NC-SA-4.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
pr4xis = { path = "../pr4xis" }
pr4xis-chat = { path = "../chat" }
pr4xis-domains = { path = "../domains" }
wasm-bindgen = "0.2"

[build-dependencies]
pr4xis = { path = "../pr4xis", features = ["codegen"] }
