[package]
name = "pr4xis-wasm"
version = "0.1.0"
edition = "2024"
authors = ["i-am-logger"]
description = "pr4xis chatbot — WASM build for browser"
license = "CC-BY-NC-SA-4.0"
repository = "https://github.com/i-am-logger/pr4xis"
homepage = "https://github.com/i-am-logger/pr4xis"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
pr4xis = { path = "../pr4xis" }
pr4xis-chat = { path = "../chat" }
pr4xis-domains = { path = "../domains" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"

[lints.rust]
dead_code = "deny"
unused_imports = "deny"
unused_variables = "deny"
unused_must_use = "deny"

[lints.clippy]
todo = "deny"
unimplemented = "deny"
unreachable = "deny"

[build-dependencies]
pr4xis = { path = "../pr4xis", features = ["codegen"] }
