[package]
name = "pr4xis-web"
version = "0.1.0"
edition = "2024"
authors = ["i-am-logger"]
description = "Dev server for pr4xis — serves presentation + WASM chatbot with live reload"
license = "CC-BY-NC-SA-4.0"
repository = "https://github.com/i-am-logger/pr4xis"
homepage = "https://github.com/i-am-logger/pr4xis"

[lints]
workspace = true

[dependencies]
tiny_http = "0.12"
